Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

22-May-2013 Jean-Marie Simonet
 # [#30982] Fast links for item language associations management. Thanks Roberto Segura.
 # [#30956] No published field in Contacts Component

22-May-2013 Elin Waring
 # [#30980] Undefined variable extension. Thanks Roberto Segura

21-May-2013 Jean-Marie Simonet
 # [PR #1173] Hotfix for failure on user. Thanks David Hurley.

19-May-2013 Michael Babker
 # [#30771] Extension Manager Check Database doesn't handle SQL queries with leading comments.  Thanks Mark Dexter
 #$ [#30867] More ':' than we need at Mass Mail.  Thanks Jean-Marie Simonet
 # [#30880] Article Count at beez3.  Thanks David Hurley
 ^ [#30819] Removes unnecessary clearfix divs.  Thanks Seth Warburton
 # [#30754] Wrong display of the Debug Console (404 Error).  Thanks Brian Teeman
 ^ [#30658] Adds WAI-ARIA Landmark Roles to Protostar.  Thanks Seth Warburton
 ^ [#30918] Code duplication removal for saveOrderAjax.  Thanks Elin Waring
 # [#30814] Undefind line at isis cpanel.  Thanks Tobias Zulauf
 # [#30932] Missing variable in gmail authentication.  Thanks Janich Rasmussen
 ^ [#30777] Removes html elements used in the wrong context.  Thanks Seth Warburton
 ^ [#30673] Improving query for similar tags module.  Thanks Thomas Hunziker
 # [#30695] Duplicate <div class="control-group"> for tags field.  Thanks Dennis Hermatski
 # [#30500] Show / Hide Filter Field not working in tags layouts.  Thanks Mark Dexter
 # [#30906] *Batch usage needs strict permissions.  Thanks Jean-Marie Simonet
 # [#30947] Bugs at the debug console if i select some images (e.g. the offline image at the global configuration).  Thanks Tobias Zulauf
 ^ [#30898] Corrects styling issues with mod_articles_category by removing h tags.  Thanks Seth Warburton