@@ -1,0 +1,303 @@
+; Joomla! Project
+; Copyright (C) 2005 - 2013 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt
+; Note : All ini files need to be saved as UTF-8
+
+
+
+;Stepbar
+INSTL_STEP_COMPLETE_LABEL="Mbaro"
+INSTL_STEP_DATABASE_LABEL="Databaze"
+INSTL_STEP_DEFAULTLANGUAGE_LABEL="Zgjidh gjuhen Default"
+INSTL_STEP_FTP_LABEL="FTP"
+INSTL_STEP_LANGUAGE_LABEL="Gjuha"
+INSTL_STEP_LANGUAGES_LABEL="Instalo gjuhen"
+INSTL_STEP_LICENSE_LABEL="Licensa"
+INSTL_STEP_PREINSTALL_LABEL="Kerko para-instalim"
+INSTL_STEP_SITE_LABEL="Konfigurim"
+INSTL_STEP_SUMMARY_LABEL="Parathenie"
+INSTL_STEPS_TITLE="Hapat"
+
+;Language view
+INSTL_LANGUAGE_TITLE="Zgjidh gjuhen"
+INSTL_SELECT_LANGUAGE_DESC="Ju lutem zgjidhni gjuhen qe do perdorni gjate Joomla! Hapat e instalimit:"
+INSTL_SELECT_LANGUAGE_TITLE="Zgjidh gjuhen"
+INSTL_WARNJAVASCRIPT="Kujdes! JavaScript duhet te aktivizohet per instalimin tuaj te Joomla!"
+INSTL_WARNJSON=" Instalimi  i PHP tuaj duhet te kete  JSON te aktivizuar qe Joomla te instalohet!"
+
+;Preinstall view
+INSTL_PRECHECK_TITLE=" Kerkim i Para-Instalimit "
+INSTL_PRECHECK_FOR_VERSION="Kerko per Para-Instalimit %s:"
+INSTL_PRECHECK_DESC="Nese ndonje nga keto pika nuk eshte e suportuar (e shenuar si <strong class="_QQ_"red"_QQ_">No</strong>) ju lutem mirni masa ti rrregulloni.<br />Ju nuk mund te instaloni Joomla! derisa te keni rregulluar kerkesat e e kerkuara."
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_TITLE="Parametrat e rekomanduar:"
+INSTL_PRECHECK_RECOMMENDED_SETTINGS_DESC="Keto parametra jane rekomanduar per  PHP per nje perputhje te plote me Joomla.<br />Sidoqofte, Joomla! do operoje edhe nese parametrat tuaj nuk perputhen me ato te rekomanduara ."
+INSTL_PRECHECK_DIRECTIVE="Direktoria"
+INSTL_PRECHECK_RECOMMENDED="Rekomanduar"
+INSTL_PRECHECK_ACTUAL="Aktuale"
+
+; Database view
+INSTL_DATABASE="Konfigurimi i Databazes"
+INSTL_DATABASE_HOST_DESC="Zakonisht eshte &quot;localhost&quot;"
+INSTL_DATABASE_HOST_LABEL="Emri i Host Name"
+INSTL_DATABASE_NAME_DESC="Disa host lejojne vetem disa emra DB name per sitin. Perdor prapashtesen e tabelave ne kete rast per t'u dalluar nga  sitet Joomla! ."
+INSTL_DATABASE_NAME_LABEL="Emri i Databazes"
+INSTL_DATABASE_NO_SCHEMA="Asnje skeme databaze ekziston per kete tip databaze."
+INSTL_DATABASE_OLD_PROCESS_DESC="Ndonje backup eksiztues te tabeles nga instalimi i former Joomla! do zevendesohet"
+INSTL_DATABASE_OLD_PROCESS_LABEL="Procesi i databazes se vjeter"
+INSTL_DATABASE_PASSWORD_DESC="Per sigurine e sitit perdorimi i passwordit per llogarine e databazes eshte e rendesishme"
+INSTL_DATABASE_PASSWORD_LABEL="Password"
+INSTL_DATABASE_PREFIX_DESC="Zgjidhni nje prapashtese tabele ose perdorni <b>te gjeneruar ne menyre random</b>.  tre apo karaktere e gjate, permban vetem karaktere alfanumerike, dhe DUHET te mbaroje me underscore vije poshte. <b>sigurohuni qe prapashtesa e zgjedhur nuk eshte perdorur nga tabela te tjera</b>."
+INSTL_DATABASE_PREFIX_LABEL="Prefixi i tabeles"
+INSTL_DATABASE_PREFIX_MSG="Prefixi i tabeles duhet te filloje me shkronje , ndjekur nga nje karakter alfanumerik opcionale dhe underscore "
+INSTL_DATABASE_TYPE_DESC="Kjo eshte ndoshta &quot;MySQLi&quot;"
+INSTL_DATABASE_TYPE_LABEL="Tipi i Databazes "
+INSTL_DATABASE_USER_DESC="edhe dicka si  "_QQ_"root"_QQ_" ose emer perdoruesi username i  dhene nga host"
+INSTL_DATABASE_USER_LABEL="Emri i perdoruesit"
+INSTL_DATABASE_TITLE="Konfigurime lidhjeje"
+INSTL_DATABASE_DESC="<p>A Joomla! website ruan shume nga te dhenat ne databazen e saj. Kjo pamje ju jep programin e instalimit e  informacionet e nevojshme per te krijuar kte databaze.</p><p> Nese po instaloni Joomla! one nje web server remote, ju duhet ti merni keto informacione nga hosti juaj.</p><p>Disa web hosts kerkojne qe ju te krijoni nje databaze para se te instaloni Joomla. Nese merni kete mesazh "_QQ_"Nuk mund te lidheni me databazen"_QQ_", sigurohuni qe emri i perdoruesit e password jane te sakte. Nese prap e merni kete mesazh, kontrolloni ne  host per te pare nese keni nevoje te krijoni databazen para instalimit te Joomla.</p>"
+ 
+;FTP view
+INSTL_AUTOFIND_FTP_PATH="Gjetje automatike e Path te FTP "
+INSTL_FTP=" Konfigurim FTP"
+INSTL_FTP_DESC="<p>Ne disa server ju duhet te vendosni kredencialet e  FTP qe instalimi te kompletohet. Nese keni veshtirese per te kompletuar instalimin pa keto kredenciale, kerkoni ne   hostin tuaj peer te percaktuar nese kjo eshte e nevojshme. </p><p>Per arsye sigurie, eshte me mire te krijoni nje llogari perdoruesi FTP per te aksesuar vetem ne  instalimin e  Joomla! dhe jo ne te gjithe web server. Hosti juaj mund t'ju ndihmoje ne .</p><p><b>Shenim:</b> Nese po e instaloni ne Sistem Operativ Windows , nerfaqja FTP layer eshte <strong>PA</strong> e pakerkuar.</p>"
+INSTL_FTP_ENABLE_LABEL="Aktivizo FTP Layer"
+INSTL_FTP_HOST_LABEL="FTP Host"
+INSTL_FTP_PASSWORD_LABEL="FTP Password"
+INSTL_FTP_PORT_LABEL="FTP Port"
+INSTL_FTP_ROOT_LABEL="FTP Root Path"
+INSTL_FTP_SAVE_LABEL="Shpeto Password FTP"
+INSTL_FTP_TITLE=" Konfigurimi FTP  (<strong class="_QQ_"red"_QQ_">Opcionale - Shume perdorues mudn ta anashkalojne kete hap - Merrni Next per ta evituar</strong>)"
+INSTL_FTP_USER_LABEL="FTP Username"
+INSTL_SITE_NAME_LABEL="Site Name"
+INSTL_VERIFY_FTP_SETTINGS="Verifiko parametrat FTP "
+INSTL_FTP_SETTINGS_CORRECT="Parametra korrekte"
+INSTL_FTP_USER_DESC="Kujdes! Rekomandohet te lini bosh dhe te vendosni emrin e perdorimit  FTP cdo here ju trasferoni filet."
+INSTL_FTP_PASSWORD_DESC="Kujdes! Rekomandohet te lini bosh dhe te vendosni password  FTP cdo here ju trasferoni filet."
+
+;Site View
+INSTL_SITE="Konfigurimi Main"
+INSTL_ADMIN_EMAIL_LABEL="Email Admin "
+INSTL_ADMIN_EMAIL_DESC="Vendosni nje adres emaili.Kjo do jet adresa e emailit te super administratorit te  Web site-it."
+INSTL_ADMIN_PASSWORD_LABEL="Password Admin "
+INSTL_ADMIN_PASSWORD_DESC="Vendosni passwordin per llogarine  Super Administrator dhe konfirmojeni ne fushen e meposhtme"
+INSTL_ADMIN_PASSWORD2_LABEL="Konfirmo Password Admin "
+INSTL_ADMIN_USER_LABEL=" Emri i Admin "
+INSTL_ADMIN_USER_DESC="Ju mund ta ndryshoni emrin default  <strong>admin</strong>."
+INSTL_SITE_NAME_TITLE="Emri i sitit"
+INSTL_SITE_NAME_DESC="Vendosni emrin e sitit tuaj Joomla! ."
+INSTL_SITE_METADESC_LABEL="Pershkrimi"
+INSTL_SITE_METADESC_TITLE_LABEL="Vendosni nje pershkrim permbledhes te  Web site qe mund te pedoret per kerkimet e perdoruesve. Zakonisht ,maksimumi  20 fjale eshte perfekte."
+INSTL_SITE_OFFLINE_LABEL="Web site Offline"
+INSTL_SITE_OFFLINE_TITLE_LABEL="Vendosni   frontend te sitit offline kur instalimi te kompletohet. Siti mund te vendoset online me vone nepermjet Konfigurimit Global ."
+INSTL_SITE_INSTALL_SAMPLE_LABEL="Instalo Sample Data"
+INSTL_SITE_INSTALL_SAMPLE_DESC="Instalimi i  sample data eshte shume e rekomanduar per fillestaret.<br />Kjo do instaloje disa permbajtje qe jane te perfshira ne instalimin e paketes Joomla! ."
+INSTL_SITE_INSTALL_SAMPLE_NONE="Asnje"
+INSTL_SAMPLE_BLOG_SET="Blog English (GB) Sample Data"
+INSTL_SAMPLE_BROCHURE_SET="Broshure English (GB) Sample Data"
+INSTL_SAMPLE_DATA_SET="Default English (GB) Sample Data"
+INSTL_SAMPLE_LEARN_SET="Meso Joomla English (GB) Sample Data"
+INSTL_SAMPLE_TESTING_SET="Test English (GB) Sample Data"
+
+;Summary view
+INSTL_FINALISATION="Perfundimi"
+INSTL_SUMMARY_INSTALL="Instalo"
+INSTL_SUMMARY_EMAIL_LABEL="Konfigurimi email"
+INSTL_SUMMARY_EMAIL_DESC="Dergo parametrat e konfigurimit te %s me email pas instalimit."
+INSTL_SUMMARY_EMAIL_PASSWORDS_LABEL="Vendos dhe password ne email"
+INSTL_SUMMARY_EMAIL_PASSWORDS_DESC="Kujdes! Rekomandohet te mos dergoni dhe ruani passwordet tuaja ne email."
+
+;Installing view
+INSTL_INSTALLING="Duke instaluar.."
+INSTL_INSTALLING_DATABASE_BACKUP="Back up tabelat e vjetra te databazes"
+INSTL_INSTALLING_DATABASE_REMOVE="Duke hequr tabelat e vjetra te databazes"
+INSTL_INSTALLING_DATABASE="Duke krijuar tabelat ne  databaze"
+INSTL_INSTALLING_SAMPLE="Duke instaluar sample data"
+INSTL_INSTALLING_CONFIG="Krijimi i file te konfigurimit"
+INSTL_INSTALLING_EMAIL="Dergimi i emailit ne %s"
+
+;Email
+INSTL_EMAIL_SUBJECT="Detajet e konfigurimet: %s"
+INSTL_EMAIL_HEADING="Me poshte mudn te gjeni parametrat e konfigurimeve per nje setup te website te  ri te  Joomla! :"
+INSTL_EMAIL_NOT_SENT="Emaili nuk mund te dergohet."
+
+;Complete view
+INSTL_COMPLETE="Mbaroi"
+INSTL_COMPLETE_ADMINISTRATION_LOGIN_DETAILS="Detaje login administruesi"
+INSTL_COMPLETE_DESC1="Kliko ne butonin Site siti te shikoni Joomla! Web site ose butonin Admin qe te shkoni ne  administrator login."
+INSTL_COMPLETE_DESC2="Ne  sitin e Komunitetit Joomla! , Ju do gjeni nje liste me linke te mundshme me paketat e gjuheve ne dispozicion si dhe risorsa te tjera ne joomla.org ."
+INSTL_COMPLETE_DESC3="Klikoni ne butonin ne te djathte te hapni sitin e Komunitetit ne dritare te re."
+INSTL_COMPLETE_ERROR_FOLDER_ALREADY_REMOVED="Kartela e instalimit tashme u fshi."
+INSTL_COMPLETE_ERROR_FOLDER_DELETE="Kartela e instalimit nuk mund te fshihet. Ju lutem fshijeni kete kartel manualisht."
+INSTL_COMPLETE_FOLDER_REMOVED="Kartela e instalimit u hoq me sukses"
+INSTL_COMPLETE_LANGUAGE_1="Joomla! ne gjuhen tuaj?"
+INSTL_COMPLETE_LANGUAGE_DESC="Para se te hisni kartelen e instalimit mund te instaloni gjuhe te tjera. Nese doni te shtoni gjueh extra  Joomla! klikoni te butoni i meposhtem."
+INSTL_COMPLETE_LANGUAGE_DESC2="Shenim: do ju duhet akses Interneti te lejoni shkarimin e  Joomla! e instalimin e gjuheve te tjera. <br/>Disa konfigurime serveri nuk lejojne  Joomla! te instaloje gjuhet. Nese eshte ne rastin tuaj, mos u merzisni,mund ti instaloni me vone duke perdorur Joomla! administrator."
+INSTL_COMPLETE_REMOVE_FOLDER="Hiqni kartelen e instalimit"
+INSTL_COMPLETE_REMOVE_INSTALLATION="JU LUTEM KUJTOHU TE ELIMINONI KOMPLET KARTELEN E INSTALIMIT.<br />ju nuk do jeni ne gjendje te vazhdoni pas kesaj pike derisa kartela e instalimit te hiqet . Kjo eshte feature sigurie per Joomla!."
+INSTL_COMPLETE_TITLE="Urime! Joomla! tashme eshte instaluar."
+INSTL_COMPLETE_INSTALL_LANGUAGES="Hapa extra: Instalo gjuhet"
+
+;Languages view
+INSTL_LANGUAGES="Instalo paketat e gjuhes"
+INSTL_LANGUAGES_COLUMN_HEADER_LANGUAGE="Gjuha"
+INSTL_LANGUAGES_COLUMN_HEADER_VERSION="Versioni"
+INSTL_LANGUAGES_DESC="Nderfaqja e  Joomla eshte e disponueshme ne disa gjuhe. Zgjidhni gjuhen tuaj te preferuar duke klikuar ne checkboxes dhe instalojeni duke klikuar ne butoni Next pasardhes .<br/>Shenim: ky operacion do  mare  5 sekonda per te shkarkuar e instaluar cdo gjuhe. Ju lutem mos zgjidhni me shume se  3 gjuhe per te instaluar per mos kaluar jashte limite kohore."
+INSTL_LANGUAGES_MESSAGE_PLEASE_WAIT="Ky oeracion do mari 10 sekonda per gjuhen te instalohet<br />Ju lutem prisni sa te shkarkohet e instalohet gjuha..."
+INSTL_LANGUAGES_NO_LANGUAGE_SELECTED="Ju lutem zgjidhni nje gjuhe. Nese nuk keni nevoje te instaloni gjuhe te tjera merni butonin 'Previous' Para"
+INSTL_LANGUAGES_WARNING_NO_INTERNET="Joomla! nuk mund t elidhej me serverin e gjuhes. Ju lutem perfunoni procesin e instalimit."
+INSTL_LANGUAGES_WARNING_NO_INTERNET2="Shenim: ju mund te instaloni edhe me vone gjuhe te tjera duke perdorur Joomla! administrator"
+INSTL_LANGUAGES_WARNING_BACK_BUTTON="Kthehuni ne hapin e fundit te instalimit"
+
+;Defaultlanguage view
+INSTL_DEFAULTLANGUAGE_ADMINISTRATOR="Gjuha Default Administrator"
+INSTL_DEFAULTLANGUAGE_ADMIN_COULDNT_SET_DEFAULT="Joomla nuk mund ta vendoste gjuhen si default. Anglishtja do perdoret si gjuhe default per backend ADMINISTRATOR."
+INSTL_DEFAULTLANGUAGE_ADMIN_SET_DEFAULT="Joomla percaktoi  %s si gjuhen  default ADMINISTRATOR ."
+INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_SELECT="Zgjidh"
+INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_LANGUAGE="Gjuha"
+INSTL_DEFAULTLANGUAGE_COLUMN_HEADER_TAG="Tag"
+INSTL_DEFAULTLANGUAGE_COULD_NOT_INSTALL_LANGUAGE="Joomla nuk mundi te instalonte %s gjuhe"
+INSTL_DEFAULTLANGUAGE_DESC="Joomla ka instaluar gjuhet e meposhtme.Ju lutem zgjidhni gjuhen tuaj default  te deshiruar per Joomla administrator dhe shtypni butonin pasardhes ."
+INSTL_DEFAULTLANGUAGE_DESC_FRONTEND="Joomla ka instaluar gjuhet e meposhtme. Ju lutem zgjidhni gjuhen tuaj default  te deshiruar per Joomla frontend dhe shtypni butonin pasardhes ."
+INSTL_DEFAULTLANGUAGE_FRONTEND="Gjuha Default web-site "
+INSTL_DEFAULTLANGUAGE_FRONTEND_COULDNT_SET_DEFAULT="Joomla nuk mundi ta vendoste gjuhen si default. Anglishtja do perdoret si gjuhe default per  sitin frontend ."
+INSTL_DEFAULTLANGUAGE_FRONTEND_SET_DEFAULT="Joomla percaktoi  %s si gjuhen  default  te SITe-it ."
+INSTL_DEFAULTLANGUAGE_NOTE="Shenim: Kur te shtypni butonin next ,pasardhes, do gjendeni ne fund te procesit te instalimit ku do ju kerkohet te fshini kartelen e instalimit."
+INSTL_DEFAULTLANGUAGE_TABLE_HEADER="Zgjidhni gjuhen tuaj default"
+INSTL_DEFAULTLANGUAGE_TRY_LATER="Ju mund ta instaloni ate me vone duke perdorur  Joomla! Administrator"
+
+;Database Model
+INSTL_DATABASE_COULD_NOT_CONNECT="Nuk mund te lidhet me databazen. Connector kthen numrat: %s"
+INSTL_DATABASE_COULD_NOT_REFRESH_MANIFEST_CACHE="Nuk mudn te rifreskoje   cache per extensionet: %s"
+INSTL_DATABASE_EMPTY_NAME=""
+INSTL_DATABASE_ERROR_BACKINGUP="Disa gabime ndodhen gjate  backup-it te  databazes."
+INSTL_DATABASE_ERROR_CREATE="Nje gabim ndodhi gjate perpjekjes per te krijuar databazen %s.<br />Perdoruesi nuk mund te kete te drejta per te krijuar databazen. Databaza e kerkuar ndoshta eshte e nevojshem te krijohet vecmas, para se te instaloni Joomla!."
+INSTL_DATABASE_ERROR_DELETE="Disa gabime ndodhen duke fshire databazen."
+INSTL_DATABASE_ERROR_INITIALISE_SCHEMA="Gabim ne instalimin e numrit te versionit te skemes "
+INSTL_DATABASE_FIELD_VALUE_REMOVE="Hiqni"
+INSTL_DATABASE_FIELD_VALUE_BACKUP="Backup"
+INSTL_DATABASE_FIX_TOO_LONG="Prapashtesa e tabeles  MySQL duhet te kete maksimumi 15 karaktere."
+INSTL_DATABASE_INVALID_DB_DETAILS="Detajet e dhena te databazes nuk jane korrekte dhe /ose bosh ."
+INSTL_DATABASE_INVALID_MYSQL_VERSION="Ju nevojitet MySQL 5.0.4 ose me i larte per te vazhduar instalimin. Versioni juaj eshte: %s"
+INSTL_DATABASE_INVALID_MYSQLI_VERSION="Ju nevojitet MySQL 5.0.4 ose me i larte per te vazhduar instalimin. Versioni juaj eshte: %s"
+INSTL_DATABASE_INVALID_SQLSRV_VERSION="Ju nevojitet SQL Server 2008 R2 (10.50.1600.1) ose me i larte per te vazhduar instalimin. Versioni juaj eshte: %s"
+INSTL_DATABASE_INVALID_SQLZURE_VERSION="Ju nevojitet SQL Server 2008 R2 (10.50.1600.1) ose me i larte per te vazhduar instalimin. Versioni juaj eshte: %s"
+INSTL_DATABASE_INVALID_TYPE="Ju lutem zgjidhni nje tip databaze"
+INSTL_DATABASE_NAME_TOO_LONG="Emri i databazes MySQL database duhet te jete maksimumi nga 64 karakter."
+INSTL_DATABASE_PREFIX_INVALID_CHARS="Prapashtesa e tabeles MySQL duhet te filloje me shkronje dhe te ndiqet vetem nga shkronja numra dhe underscore."
+INSTL_DATABASE_INVALID_NAME="Versioni para MySQL  5.1.6 nuk mund te permbaje presje apo  "_QQ_"speciale"_QQ_" karaktere ne emer. Versioni juaj eshte: %s"
+INSTL_DATABASE_NAME_INVALID_SPACES="Emri i databazes MySQL dhe emrat e tabeles nuk mund te fillojne apo mbarojne me hapesira."
+INSTL_DATABASE_NAME_INVALID_CHAR="Asnje indentikues MySQL nuk mund te permbaje NUL ASCII(0x00)."
+INSTL_DATABASE_FILE_DOES_NOT_EXIST="File %s nuk ekziston"
+
+;controllers
+INSTL_COOKIES_NOT_ENABLED="Cookis nuk duket te jene aktivizuar ne browser-in  klient. Ju nuk mund te instaloni aplikacionin me kete opcion te c'aktivizuar Perndryshe, mund te kete problem edhe ne serverin  <strong>session.save_path</strong>. Nese ndodh ky rast, konsultohuni me burimin tuaj te   hosting  nese vet nuk dini si ta zgjidhni."
+INSTL_HEADER_ERROR="Gabim"
+
+;Helpers
+INSTL_PAGE_TITLE="Joomla! Web Installer"
+
+;Configuration model
+INSTL_ERROR_CONNECT_DB="Nuk mund te lidhet me databazen. Connector numrat e kthyer: %s"
+INSTL_STD_OFFLINE_MSG="Ky web-site eshte ne ndertim e siper.<br /> Ju lutem rikthehuni me vone."
+
+;FTP model
+INSTL_FTP_INVALIDROOT="Kartela e specifikuar FTP  nuk eshte direktori e ketij instalimi te Joomla! "
+INSTL_FTP_NOCONNECT="Nuk mund te lidhet me  FTP server"
+INSTL_FTP_NODELE="Funksioni "_QQ_"DELE"_QQ_" deshtoi."
+INSTL_FTP_NODIRECTORYLISTING="Nuk mund te arrije nje liste kartelash nga FTP server."
+INSTL_FTP_NOLIST="Funksioni "_QQ_"LIST"_QQ_" deshtoi."
+INSTL_FTP_NOLOGIN="Nuk mund te logohemi ne  FTP server."
+INSTL_FTP_NOMKD="Funksioni "_QQ_"MKD"_QQ_" deshtoi."
+INSTL_FTP_NONLST="Funksioni "_QQ_"NLST"_QQ_" deshtoi."
+INSTL_FTP_NOPWD="Funksioni "_QQ_"PWD"_QQ_" deshtoi."
+INSTL_FTP_NORETR="Funksioni "_QQ_"RETR"_QQ_" deshtoi."
+INSTL_FTP_NORMD="Funksioni "_QQ_"RMD"_QQ_" deshtoi."
+INSTL_FTP_NOROOT="Nuk mund te aksesojne ne direktorine  FTP ."
+INSTL_FTP_NOSTOR="Funksioni "_QQ_"STOR"_QQ_" deshtoi."
+INSTL_FTP_NOSYST="Funksioni "_QQ_"SYST"_QQ_" deshtoi."
+INSTL_FTP_UNABLE_DETECT_ROOT_FOLDER="Jo ne gjendje te gjejme ne menyre automatike kartelen FTP root ."
+
+;others
+INSTL_ADVANCED_SETTINGS="Konfigurime te avancuara"
+INSTL_BASIC_SETTINGS="Konfigurime Bazike"
+INSTL_CONFPROBLEM="File juaj i konfigurimit apo direktoria nuk eshte e shkrueshmeose ka nje problem duke krijuar kete file. Ju duhet te karikoni kodin e meposhtem manualisht. Kliko ne hapesiren text te shfaqni te tere kodin per ta kopjuar ate ne nje file text te ri. Emerojeni kete file 'configuration.php' dhe karikojeni ne kartelen  root te sitit tuaj."
+INSTL_DATABASE_SUPPORT="Suport Databaze :"
+INSTL_DISPLAY_ERRORS="Shfaq gabimet"
+INSTL_ERROR_DB="Disa gabime ndodhen gjate popullimit te  databazes: %s"
+INSTL_ERROR_INITIALISE_SCHEMA="Nuk mund te inicializoje skemen e  databazes"
+INSTL_FILE_UPLOADS="File te uploduara"
+INSTL_GNU_GPL_LICENSE="GNU General Public License"
+INSTL_INSTALLATION="Instalimi"
+INSTL_JSON_SUPPORT_AVAILABLE="JSON Support"
+INSTL_LICENSE="License"
+INSTL_MAGIC_QUOTES_GPC="Magic Quotes GPC Off"
+INSTL_MAGIC_QUOTES_RUNTIME="Magic Quotes Runtime"
+INSTL_MB_LANGUAGE_IS_DEFAULT="Gjuha MB eshte Default"
+INSTL_MB_STRING_OVERLOAD_OFF="fjala  mbingarkuar MB  Off"
+INSTL_NOTICEMBLANGNOTDEFAULT="Gjuha PHP mbstring nuk eshte vendosur ne neutrale. Kjo mund te vendoset lokalisht duke futur <strong>php_value mbstring.language neutral</strong> ne filen tuaj <code>.htaccess</code> ."
+INSTL_NOTICEMBSTRINGOVERLOAD="Funksioni String Overload PHP mbstring  eshte vendosur. Kjo mund te behet off duke vendosur <strong>php_value mbstring.func_overload 0</strong> ne filen tuaj <code>.htaccess</code> ."
+INSTL_NOTICEYOUCANSTILLINSTALL="<br />Ju mund te vazhdoni instalimin dhe parametrat e konfigurimit do ju shfaqen ne fund. Do ju duhet te karikoni manualisht kodin. Kliko ne hapesiren text te shfaqni te tere kodin per ta kopjuar ate ne nje file text te ri. Emerojeni kete file 'configuration.php' dhe karikojeni ne kartelen  root te sitit tuaj."
+INSTL_OUTPUT_BUFFERING="Output Buffering"
+INSTL_PARSE_INI_FILE_AVAILABLE="INI Parser Suport"
+INSTL_PHP_VERSION="Version PHP "
+INSTL_REGISTER_GLOBALS="Regjsitrimi i  Globaleve Off C'aktivizuar"
+INSTL_SAFE_MODE="Menyre e Sigurte"
+INSTL_SESSION_AUTO_START="Seksion Auto Start"
+INSTL_WRITABLE="%s me te drejta shkrimi"
+INSTL_XML_SUPPORT="Mbeshtetje XML "
+INSTL_ZIP_SUPPORT_AVAILABLE="Mbeshtetje Native ZIP "
+INSTL_ZLIB_COMPRESSION_SUPPORT="Zlib Mbeshtetje Kompresioni"
+INSTL_PROCESS_BUSY="Proces ne progres. Ju lutem prisni..."
+
+;Global strings
+JADMINISTRATOR="Administrator"
+JADVANCED="Avancuar"
+JCHECK_AGAIN="Kerko perseri"
+JERROR="Gabim"
+JEMAIL="Email"
+JGLOBAL_ISFREESOFTWARE="%s softwer i lire , i leshuar ne %s."
+JGLOBAL_LANGUAGE_VERSION_NOT_PLATFORM="Paketa e gjuhes nuk perputhet me kete version Joomla! . Disa fjale ndoshta mungojne."
+JGLOBAL_SELECT_AN_OPTION="Zgjidhni nje opcion"
+JGLOBAL_SELECT_NO_RESULTS_MATCH="Asnje rezultat i perputhur"
+JGLOBAL_SELECT_SOME_OPTIONS="Zgjidhni disa opcione"
+JINVALID_TOKEN="Kerkesat me te shumta te fundit nuk jane lejuar pasi  pasi kane  token sigurie te pavlefshme. Ju luem rifreskoni faqen e provojeni perseri."
+JNEXT="Tjetra"
+JNO="Jo
+JNOTICE="Lajmerim"
+JOFF="C'aktivizuar"
+JON="Aktivizuar"
+JPREVIOUS="Para"
+JSITE="Siti"
+JUSERNAME="Emer Perdoruesi"
+JYES="Po"
+
+; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_CONNECT_MYSQL="Nuk mund te lidhet me MySQL."
+JLIB_DATABASE_ERROR_DATABASE="Nje gabim ne Databaze ndodhi."
+JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="E pamundur te karikohen Driver e  Databazes: %s"
+JLIB_ENVIRONMENT_SESSION_EXPIRED="Koha juaj skadoi, ju lutem rifreskoni faqen."
+JLIB_FILESYSTEM_ERROR_PATH_IS_NOT_A_FOLDER_FILES="JFolder: :file: Path nuk eshte kartele. Path: %s"
+JLIB_FORM_FIELD_INVALID="Fushe e pavlefshme:&#160;"
+JLIB_FORM_VALIDATE_FIELD_INVALID="Fushe e pavlefshme:: %s"
+JLIB_FORM_VALIDATE_FIELD_REQUIRED="Fushe e detyruar: %s"
+JLIB_UTIL_ERROR_CONNECT_DATABASE="JDatabase: :getInstance: Nuk mund te lidhet me databazen <br />joomla.library: %1$s - %2$s"
+
+; Strings for the language debugger
+JDEBUG_LANGUAGE_FILES_IN_ERROR="gabimet ne filen e gjuhes"
+JDEBUG_LANGUAGE_UNTRANSLATED_STRING="fjale te paperkthyera"
+JNONE="Asnje"
+
+; Necessary for errors
+ADMIN_EMAIL="Email Admin "
+ADMIN_PASSWORD="Password Admin "
+ADMIN_PASSWORD2="Konfirmo Password Admin "
+SITE_NAME="Emri i Sitit"
+
+; Database types (allows for a more descriptive label than the internal name)
+MYSQL="MySQL"
+MYSQLI="MySQLi"
+ORACLE="Oracle"
+POSTGRESQL="PostgreSQL"
+SQLAZURE="Microsoft SQL Azure"
+SQLITE="SQLite"
+SQLSRV="Microsoft SQL Server"
