@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="utf-8"?>
+<metafile
+	version="3.1"
+	client="installation">
+	<name>Albanian (Albanian)</name>
+	<version>3.1</version>
+	<creationDate>April 2013</creationDate>
+	<author>Albanian Translation Team Besiana Bici</author>
+	<copyright>Copyright (C) 2005 - 2013 Open Source Matters. All rights reserved.</copyright>
+	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
+	<description></description>
+	<files>
+		<filename>sq-AL.ini</filename>
+	</files>
+	<metadata>
+		<name>Albanian (Albania)</name>
+		<tag>sq-AL</tag>
+		<rtl>0</rtl>
+	</metadata>
+	<params />
+</metafile>
